resolved double scrollbar in "Panoramica classi"

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -78,9 +78,26 @@
     }
 }
 
+::-webkit-scrollbar {
+    width: .4em;
+    background-color: white;
+    height: .8em;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: 0px 0px 1px 0px #BDBDBD inset;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #BDBDBD;
+    width: .4em;
+    outline: 1px solid #BDBDBD;
+    border-radius: 10px;
+}
+
 /*vertical scrollbar*/
 body::-webkit-scrollbar {
-    width: .5em;
+    width: .6em;
     background-color: white;
 }
 
@@ -91,23 +108,6 @@ body::-webkit-scrollbar-track {
 body::-webkit-scrollbar-thumb {
     background-color: #424242;
     outline: 1px solid #424242;
-}
-
-.suwala-doubleScroll-scroll-wrapper::-webkit-scrollbar {
-    width: .4em;
-    background-color: white;
-    height: .8em;
-}
-
-.suwala-doubleScroll-scroll-wrapper::-webkit-scrollbar-track {
-    -webkit-box-shadow: #BDBDBD;
-}
-
-.suwala-doubleScroll-scroll-wrapper::-webkit-scrollbar-thumb {
-    background-color: #BDBDBD;
-    width: .4em;
-    outline: 1px solid #BDBDBD;
-    border-radius: 10px;
 }
 
 /*history*/
